# dev-tools-mcp

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
dev_tools_mcp/: main.py  prompts.py  server.py
dev_tools_mcp/models/: session.py
dev_tools_mcp/prompts/: __init__.py  system.py
dev_tools_mcp/tools/: base.py  base_file_editor.py  bash_tool.py  ckg_tool.py  directory_explorer_tool.py  edit_tool.py  file_system_tool.py  git_tool.py  json_edit_tool.py  sequential_thinking_tool.py  task_done_tool.py
dev_tools_mcp/tools/ckg/: ckg_database.py  ckg_manager.py
dev_tools_mcp/tools/utils/: __init__.py  constants.py  file_utils.py  formatting_utils.py  git_utils.py  path_utils.py  search_utils.py
dev_tools_mcp/utils/: config.py  constants.py  dependencies.py  path_utils.py  session_manager.py
docs/: active_reindexing_strategy.md  api_driver_architecture.md  ckg_implementation_details.md  ckg_improvement_strategy.md  mcp_server_design.md  mcp_server_design_ru.md  project_breakdown.md  refactoring_plan_ru.md  rollback_implementation_strategy.md  test_file.txt
docs/tools/: bash_tool_design_ru.md
tests/tools/: test_bash_tool.py  test_edit_tool.py  test_json_edit_tool.py
